feat: add support for child schedule
